--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "dependencies": {
     "axios": "^1.7.5",
     "date-fns": "^3.6.0",
-    "json-server": "^1.0.0-beta.2",
+    "json-server": "^0.17.4",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "rsuite": "^5.77.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
