--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.5",
     "date-fns": "^3.6.0",
     "json-server": "^0.17.4",
@@ -23,12 +24,13 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
-    "rsuite": "^5.77.1"
+    "rsuite": "^5.77.1",
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
